finished ex01 of cpp-04

--- a/Milestone 4/CPP 04/ex01/Makefile
+++ b/Milestone 4/CPP 04/ex01/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = animal
+NAME = brains
 CPP = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 
